Alura - Terraform 03 - Infraestrutura Elástica (Templates + ELB)/Terraform/security_group.tf
resource "aws_security_group" "alura" {
  name = "alura_ssh"
  # Default VPC
  vpc_id = "vpc-0acd7f4d25881eadf"

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "ssh"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Web
  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow ALL egress
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SSH e Web"
  }
}
